07-blog-k8s-loadbalancer-ingress/infra/k8s/client-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: kergrit/07-blog-client
---
apiVersion: v1
kind: Service
metadata:
  name: client-service-clusterip
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
