07-blog-k8s-loadbalancer-ingress/infra/k8s/event-bus-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: kergrit/07-blog-event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service-clusterip
spec:
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
