07-blog-k8s-loadbalancer-ingress/infra/k8s/moderation-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: kergrit/07-blog-moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service-clusterip
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
