07-blog-k8s-loadbalancer-ingress/infra/k8s/query-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: kergrit/07-blog-query
---
apiVersion: v1
kind: Service
metadata:
  name: query-service-clusterip
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
